# IoT-dev

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TuyaCode.txt  idf_component.yml  partitions.csv  platformio.ini  script.py  sdkconfig.defaults  sdkconfig.m5stack-cardputer  sdkconfig.myenv  sdkconfig.myenv.old
arduino/: keypad_i2c.ino
data/: keys.json
include/access/: AccessBuildConfig.h
main/: CMakeLists.txt  idf_component.yml  main.cpp
main/backend/BACKUP/: PASE.hpp  main.cpp  mdns.hpp  udp.hpp
main/backend/matter/: Comission.txt  MatterMsg.txt
main/backend/tuya/: libtuya.cpp  libtuya.hpp
main/bigint/: hex.hpp
main/crypto/asm/: ecc-m.hpp  u288_muladd.c  (+1 more)
main/defect/: PASE.hpp  main.cpp
main/device/: loop.cpp
main/ecc/: ecc.cpp  key.hpp
main/general/: main.cpp  mdns.hpp  tcp.hpp  udp.hpp
main/matter/: MatterMsg.txt  README.md
main/matter-fw/: README.md  main.cpp
main/spake2/: crypto.hpp  spake2p-p256-old.hpp  spake2p-p256.hpp
main/spake2p/: crypto.hpp  spake2p-p256.hpp  spake2p.hpp  state.hpp
main/std/: cvt.hpp  hex.hpp  key.hpp  math.hpp  std.hpp  string.hpp  types.hpp  utils.cpp  utils.hpp
main/tlv/: tlv.cpp  tlv.h  tlv_tree.cpp  tlv_tree.h
main/tuya/: libtuya.cpp  libtuya.hpp
matter-original/: reduced.cpp  shell.hpp
matter-original/unified/: unified.cpp
misc/python/: debug.py  device.py  ipv4.py  tuya.py
partitions/: custom_4Mb.csv  custom_8Mb.csv
ports/m5stack-cardputer/: platformio.ini
python/: example.py  tcp.py  tuya.py  usage.py
scripts/: app_only.py  merge_files.bat  merge_files.sh  nvs_script.py
spec/: Chapters.md
src/: aes.hpp  core.cpp  display.hpp  esp-os.cpp  esp_os.cpp  f_string.hpp  http_server.hpp  idf_component.yml  ir_remote.hpp  localtuya.cpp  loop.cpp  loop.hpp  main.cpp  md5.hpp  net_com.hpp  nv_string.hpp  rtc.hpp  screen.hpp  sd_card.hpp  sha256.hpp  timed.hpp  tuya.hpp  utils.hpp  wifi.hpp
src/arduino/: arduino.hpp
src/checksum/: crc.hpp
src/critical/: tuya.hpp
src/crypto/: PKCS7.hpp  aes.hpp  crc.hpp  soc.hpp
src/graphics/: display.hpp  pin_config.hpp  screen.hpp  tft_display.hpp
src/hal/: arduino.hpp  current.hpp  debug.hpp  interface.hpp  network.cpp  network.hpp
src/handler/: command.hpp  device.hpp  fs.hpp  tuya_device.cpp  tuya_device.hpp
src/interface/: current.hpp
src/legacy/: tuya.hpp
src/m5stack/: config.hpp  display.cpp  display.hpp  rtc.cpp  rtc.hpp
src/matter/: appEvent.hpp  main.cpp
src/modules/: cvt_handle.hpp  http_server.hpp  ir_remote.hpp  modules.hpp  net_com.hpp  rtc.hpp  sd_card.hpp  tuya.hpp  wifi.hpp
src/network/: http_server.hpp  net_com.hpp  wifi.hpp
src/persistent/: nv_config.hpp  nv_string.hpp  nv_typed.hpp
src/std/: debug.cpp  debug.hpp  hsv.hpp  libtuya.cpp  libtuya.hpp  string.hpp  timer.hpp  utils.cpp  utils.hpp
src/storage/: nv_string.hpp  nv_typed.hpp
src/time/: rtc.hpp
src/tuya/: tuya.hpp
src/utils/: utils.hpp
tetris/src/: tetris.cpp  tetris.py
(+439 files in other folders)
